--- a/views/report_mining_invoice.xml
+++ b/views/report_mining_invoice.xml
@@ -4,7 +4,7 @@
 <template id="report_mining_invoice_document">
     <t t-call="report.external_layout">
         <t t-set="o" t-value="o.with_context({'lang':o.partner_id.lang})" />
-        <div class="page">
+        <div class="page" style="font-size: 12px !important; font-family: Rubik;">
             <h2 class="text-center" >
                 COMMERCIAL INVOICE <br/>
                 INV No. <span t-field="o.number"/>
